improved invitation screen ui

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -7,6 +7,7 @@
 
 
 .nav {
+    height: 15vh ;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,11 +37,17 @@
 
 .background{
     background-color: #3b2d62;
-    min-height: 100vh;
+    min-height: 85vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     font-size: calc(10px + 2vmin);
     color: white;
+}
+
+.center{
+    flex-direction: column;
+  align-items: center;
+
 }
